fix html spacing

--- a/css/main.css
+++ b/css/main.css
@@ -100,4 +100,5 @@ hr {
     color: white;
     padding: 15px;
     margin: 50px;
+    text-decoration: none;
 }
